handle invalid card index with user feedback and continue turn safely